fix(data-table): fix chevron alignment for Firfox

--- a/packages/components/src/components/data-table/_data-table-expandable.scss
+++ b/packages/components/src/components/data-table/_data-table-expandable.scss
@@ -166,12 +166,6 @@
     padding-bottom: 0;
   }
 
-  @supports (-moz-appearance: none) {
-    .#{$prefix}--data-table td.#{$prefix}--table-expand {
-      padding-top: rem(14px);
-    }
-  }
-
   .#{$prefix}--table-expand[data-previous-value='collapsed']
     .#{$prefix}--table-expand__svg {
     transform: rotate(270deg);
@@ -182,6 +176,7 @@
     @include button-reset('false');
     display: flex;
     justify-content: space-around;
+    align-items: center;
     height: $layout-03;
     width: $layout-01;
   }
